--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@ layout: home
 <div class="left" style="margin-top: -10px;">
 
 <!-- Put the following javascript before the closing </head> tag. -->
-<script>
-  (function() {
-    var cx = '008639695322205139647:brv1hl5vhnq';
-    var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
 
 <!-- Place this tag where you want both of the search box and the search results to render -->
 <gcse:search></gcse:search>
@@ -60,7 +51,7 @@ layout: home
         <p>
             <a href="mailto:bhattaca@cse.ohio-state.edu">bhattaca@cse.ohio-state.edu</a>
             <br/>
-            Office hours (Dreese Labs 474):
+            Office hours (Dreese Labs 474): TBD
         </p>
     </div>
 
