--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@ layout: home
         <p>
             <a href="mailto:bhattaca@cse.ohio-state.edu">bhattaca@cse.ohio-state.edu</a>
             <br/>
-            Office hours (Dreese Labs 474): TBD
+            class hours: WeFr 3:55PM - 5:15PM
+            <br/>
+            class location: Caldwell Lab 0277
+            <br/>
+            Office hours: WeFr 5:15PM - 6:00PM
         </p>
     </div>
 
