--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ layout: home
         <p>
             <a href="mailto:bhattaca@cse.ohio-state.edu">bhattaca@cse.ohio-state.edu</a>
             <br/>
-            class hours: WeFr 3:55PM - 5:15PM
+            Class hours: WeFr 3:55PM - 5:15PM
             <br/>
-            class location: Caldwell Lab 0277
+            Class location: Caldwell Lab 0277
             <br/>
             Office hours: WeFr 5:15PM - 6:00PM
         </p>
@@ -62,6 +62,18 @@ layout: home
     <p>
       Final exam:<br/>
     </p>
+    
+    <ul class="index-links">
+        <li><a href="homework/homework-1.html">Homework 1</a><span class="due">Due Sept 9, 11pm (Fri)</span></li>
+        <!--<li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due April 16, 11pm (Mon)</span></li>
+        <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due April 25, 11pm (Wed)</span></li>
+        <li><a href="homework/homework-4.html">Homework 4</a><span class="due">Due April 30, 11pm (Mon)</span></li>
+        <li><a href="homework/homework-5.html">Homework 5</a><span class="due">Due May 7, 11pm (Mon)</span></li>
+        <li><a href="homework/homework-6.html">Homework 6</a><span class="due">Due May 16, 11pm (Wed)</span></li>
+        <li><a href="homework/homework-7.html">Homework 7</a><span class="due">Due May 23, 11pm (Wed)</span></li>
+        <li><a href="homework/homework-8.html">Homework 8</a><span class="due">Due Jun  1, 11pm (Fri)</span></li>
+        -->
+    </ul>
 </div>
 
 
