Search engine added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@ layout: home
 <div class="left" style="margin-top: -10px;">
 
 <!-- Put the following javascript before the closing </head> tag. -->
+<script>
+  (function() {
+    var cx = '015382864243928749623:h3_a_s-4nbw';
+    var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
 
 <!-- Place this tag where you want both of the search box and the search results to render -->
 <gcse:search></gcse:search>
+      
 
     <ul class="index-links">
         <li><a href="lecture/syllabus.html">Syllabus</a></li>
@@ -64,7 +74,7 @@ layout: home
     </p>
     
     <ul class="index-links">
-        <li><a href="homework/homework-1.html">Homework 1</a><span class="due">Due Sept 9, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-1.html">Homework 1</a><span class="due">Due Sept 9, 11pm (Fri) Submit in Carmen</span></li>
         <!--<li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due April 16, 11pm (Mon)</span></li>
         <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due April 25, 11pm (Wed)</span></li>
         <li><a href="homework/homework-4.html">Homework 4</a><span class="due">Due April 30, 11pm (Mon)</span></li>
