--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ layout: home
         <li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due Sept 14, 11pm (Fri)</span></li>
         <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 21, 11pm (Fri)</span></li>
         <li><a href="homework/homework-4.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
-        <li><a href="homework/homework-5.html">Homework 5</a><span class="due">Due May 7, 11pm (Mon)</span></li>
+        <!--<li><a href="homework/homework-5.html">Homework 5</a><span class="due">Due May 7, 11pm (Mon)</span></li>
         <li><a href="homework/homework-6.html">Homework 6</a><span class="due">Due May 16, 11pm (Wed)</span></li>
         <li><a href="homework/homework-7.html">Homework 7</a><span class="due">Due May 23, 11pm (Wed)</span></li>
         <li><a href="homework/homework-8.html">Homework 8</a><span class="due">Due Jun  1, 11pm (Fri)</span></li>
