Added the cse 202 slides

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: home
         <li><a href="lecture/calendar.html">Course calendar</a></li>
         <li><a href="lecture/installing-software.html">Installing required software</a></li>
         <li><a href="lecture/introduction.html">Introduction to C++</a></li>
+        <li><a href="http://www.cse.ohio-state.edu/~bhattaca/Lectures/ppt/">Cse 202 slides</a></li>
         <li><a href="lecture/variables-and-types.html">Variables and types</a></li>
         <li><a href="lecture/classes-and-objects-brief.html">C++ classes and objects (brief intro.)</a></li>
         <li><a href="lecture/arithmetic.html">Arithmetic</a></li>
@@ -40,6 +41,7 @@ layout: home
 
 
 <div class="right">
+    Arindam bhattacharya <br/>
     <div id="logo">CSE 2122</div>
 
     <div id="contact-front">
