--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: home
     </div>
 
     <p>
-      Midterm1: <br/>
+      Midterm1: Friday 21st sept 2012 <br/>
       Midterm2: <br/>
       Final exam:<br/>
     </p>
@@ -65,7 +65,7 @@ layout: home
     <ul class="index-links">
         <li><a href="homework/homework-1.html">Homework 1</a><span class="due">Due Sept 9, 11pm (Fri) Submit in Carmen</span></li>
         <li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due Sept 14, 11pm (Fri)</span></li>
-        <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 21, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 23, 11pm (Sun)</span></li>
         <li><a href="homework/homework-4.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
         <!--<li><a href="homework/homework-5.html">Homework 5</a><span class="due">Due May 7, 11pm (Mon)</span></li>
         <li><a href="homework/homework-6.html">Homework 6</a><span class="due">Due May 16, 11pm (Wed)</span></li>
