updated homeworks and index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ layout: home
             Class location: Caldwell Lab 0277
             <br/>
             Office hours: WeFr 5:15PM - 6:00PM
+            <br/>
+            Office Location: Dreese labs 474
         </p>
     </div>
 
@@ -66,7 +68,14 @@ layout: home
         <li><a href="homework/homework-1.html">Homework 1</a><span class="due">Due Sept 9, 11pm (Fri) Submit in Carmen</span></li>
         <li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due Sept 14, 11pm (Fri)</span></li>
         <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 23, 11pm (Sun)</span></li>
-        <li><a href="homework/homework-4.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-stack.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-4.html">Homework 5</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-5.html">Homework 6</a><span class="due">Due Oct 5, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-6.html">Homework 7</a><span class="due">Due Oct 12, 11pm (Fri</span></li>
+        <li><a href="http://en.wikipedia.org/wiki/Recursion">Homework 8</a><span class="due">Due Oct 19, 11pm (Fri)</span></li>
+        <li><a href="http://www.cplusplus.com/doc/tutorial/templates/">Homework 9</a><span class="due">Due Oct 26, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-7.html">Homework 10</a><span class="due">Due Nov 2, 11pm (Fri)</span></li>
+        <li><a href="http://en.wikipedia.org/wiki/Standard_Template_Library">Homework 11</a><span class="due">Due Nov 9, 11pm (Fri)</span></li>
         <!--<li><a href="homework/homework-5.html">Homework 5</a><span class="due">Due May 7, 11pm (Mon)</span></li>
         <li><a href="homework/homework-6.html">Homework 6</a><span class="due">Due May 16, 11pm (Wed)</span></li>
         <li><a href="homework/homework-7.html">Homework 7</a><span class="due">Due May 23, 11pm (Wed)</span></li>
