--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ layout: home
         <li><a href="http://www.cplusplus.com/doc/tutorial/templates/">Homework 9</a><span class="due">>>Due Nov 2, 11pm (Fri)</span></li>
         <li><a href="homework/homework-7.html">Homework 10</a><span class="due">Due Nov 9, 11pm (Fri)</span></li>
         <li><a href="http://en.wikipedia.org/wiki/Standard_Template_Library">Homework 11</a><span class="due">>></span></li>
+        <li><a href="https://dl.dropbox.com/u/2989703/textures.txt">DEBUG</a></li>
         <!--<li><a href="homework/homework-5.html">Homework 5</a><span class="due">Due May 7, 11pm (Mon)</span></li>
         <li><a href="homework/homework-6.html">Homework 6</a><span class="due">Due May 16, 11pm (Wed)</span></li>
         <li><a href="homework/homework-7.html">Homework 7</a><span class="due">Due May 23, 11pm (Wed)</span></li>
