--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ layout: home
 
     <p>
       Midterm1: Friday 21st sept 2012 <br/>
-      Midterm2: <br/>
-      Final exam:<br/>
+      Midterm2: Friday 2nd Nov 2012<br/>
+      Final exam: Friday Dec 7 4:00pm-5:45pm <br/>
     </p>
     
     <ul class="index-links">
