--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ layout: home
         <li><a href="lecture/template-metaprogramming.html">Template meta-programming</a></li>
         <li><a href="lecture/template-metaprogramming-part2.html">Template meta-programming(part2)</a></li>
         <li><a href="lecture/maps-sets-etc.html">Maps, sets, etc.</a></li>
+        <li><a href="lecture/stl-sort-search.html">Sorting and Searching</a></li>
         <li><a href="lecture/game-design.html">Game design</a></li>
     </ul>
 
