updated the index.html

--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@ layout: home
             <br/>
             Class hours: WeFr 3:55PM - 5:15PM
             <br/>
-            Class location: Caldwell Lab 0277
+            Class location: Bolz Hall 0311 
             <br/>
-            Office hours: WeFr 5:15PM - 6:00PM
+            Office hours: Mon 3:55PM - 5:15PM
             <br/>
             Office Location: Dreese labs 474
         </p>
     </div>
 
     <p>
-      Midterm1: Friday 21st sept 2012 <br/>
-      Midterm2: Friday 2nd Nov 2012<br/>
-      Final exam: Friday Dec 7 4:00pm-5:45pm <br/>
+      Midterm1: TBD <br/>
+      Midterm2: TBD <br/>
+      Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
     
     <ul class="index-links">
         <li><a href="homework/homework-1.html">Homework 1</a><span class="due">Due Sept 9, 11pm (Fri) Submit in Carmen</span></li>
-        <li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due Sept 14, 11pm (Fri)</span></li>
+        <!--<li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due Sept 14, 11pm (Fri)</span></li>
         <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 23, 11pm (Sun)</span></li>
         <li><a href="homework/homework-stack.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
         <li><a href="homework/homework-4.html">Homework 5</a><span class="due">Due Oct 5, 11pm (Fri)</span></li>
         <li><a href="homework/homework-5.html">Homework 6</a><span class="due">Due Oct 12, 11pm (Fri)</span></li>
         <li><a href="homework/homework-6.html">Homework 7</a><span class="due">Due  Nov 6, 2012 11:59 PM</span></li>
         <li><a href="homework/homework-7.html">Homework 8</a><span class="due">Due  Nov 21, 2012 11:59 PM</span></li>
-        <!--<li><a href="http://en.wikipedia.org/wiki/Recursion">Homework 8</a><span class="due">>>Due Oct 26, 11pm (Fri)</span></li>
+        <li><a href="http://en.wikipedia.org/wiki/Recursion">Homework 8</a><span class="due">>>Due Oct 26, 11pm (Fri)</span></li>
         <li><a href="http://www.cplusplus.com/doc/tutorial/templates/">Homework 9</a><span class="due">>>Due Nov 2, 11pm (Fri)</span></li>
         <li><a href="homework/homework-7.html">Homework 10</a><span class="due">Due Nov 9, 11pm (Fri)</span></li>
         <li><a href="http://en.wikipedia.org/wiki/Standard_Template_Library">Homework 11</a><span class="due">>></span></li>
