--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: home
 
     <div id="contact-front">
         <p>
-            <a href="mailto:bhattaca@cse.ohio-state.edu">bhattaca@cse.ohio-state.edu</a>
+            <a href="mailto:bhattacharya.29@osu.edu">Email me</a>
             <br/>
             Class hours: WeFr 3:55PM - 5:15PM
             <br/>
