--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ layout: home
     </p>
     
     <ul class="index-links">
-        <li><a href="homework/homework-1.html">Homework 1</a><span class="due">Due Sept 9, 11pm (Fri) Submit in Carmen</span></li>
+        <li><a href="homework/homework-1.html">Homework 1</a>></li>
         <!--<li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due Sept 14, 11pm (Fri)</span></li>
         <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 23, 11pm (Sun)</span></li>
         <li><a href="homework/homework-stack.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
