--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ layout: home
       Midterm2: TBD <br/>
       Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
-    
+    please submit homeworks in carmen 
     <ul class="index-links">
-        <li><a href="homework/homework-1.html">Homework 1</a>></li>
+        <li><a href="homework/homework-1.html">Homework 1</a></li>
         <!--<li><a href="homework/homework-2.html">Homework 2</a><span class="due">Due Sept 14, 11pm (Fri)</span></li>
         <li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 23, 11pm (Sun)</span></li>
         <li><a href="homework/homework-stack.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
