--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ layout: home
     <ul class="index-links">
         <li><a href="homework/homework-1.html">Homework 1</a></li>
         <li><a href="homework/homework-2.html">Homework 2</a></li>
-        <!--<li><a href="homework/homework-3.html">Homework 3</a><span class="due">Due Sept 23, 11pm (Sun)</span></li>
-        <li><a href="homework/homework-stack.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-3.html">Homework 3</a></span></li>
+        <!--<li><a href="homework/homework-stack.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
         <li><a href="homework/homework-4.html">Homework 5</a><span class="due">Due Oct 5, 11pm (Fri)</span></li>
         <li><a href="homework/homework-5.html">Homework 6</a><span class="due">Due Oct 12, 11pm (Fri)</span></li>
         <li><a href="homework/homework-6.html">Homework 7</a><span class="due">Due  Nov 6, 2012 11:59 PM</span></li>
