updated mid 1 date on index

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ layout: home
     </div>
 
     <p>
-      Midterm1: ***Feb 8 th Friday in class*** (close book/notes)<br/>
+      Midterm1: ***Feb 8th, Friday in class*** (close book/notes)<br/>
       Midterm2: TBD <br/>
       Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
