upadating the index with sample paper

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ layout: home
 
     <p>
       Midterm1: ***Feb 8th, Friday in class*** (close book/notes)<br/>
+      <a href=" https://dl.dropbox.com/u/2989703/midterm-spring-2012-sample.pdf">Sample Exam</a> <br/>
       Midterm2: TBD <br/>
       Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
