--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@ layout: home
 
     <p>
       Midterm1: ***Feb 8th, Friday in class*** (close book/notes)<br/>
-      <a href=" https://dl.dropbox.com/u/2989703/midterm-spring-2012-sample.pdf">Sample Exam</a> <br/>
       Midterm2: TBD <br/>
       Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
@@ -71,8 +70,8 @@ layout: home
         <li><a href="homework/homework-1.html">Homework 1</a></li>
         <li><a href="homework/homework-2.html">Homework 2</a></li>
         <li><a href="homework/homework-3.html">Homework 3</a></span></li>
-        <!--<li><a href="homework/homework-stack.html">Homework 4</a><span class="due">Due Sept 28, 11pm (Fri)</span></li>
-        <li><a href="homework/homework-4.html">Homework 5</a><span class="due">Due Oct 5, 11pm (Fri)</span></li>
+        <li><a href="homework/homework-stack.html">Homework 4</a></li>
+        <!--<li><a href="homework/homework-4.html">Homework 5</a><span class="due">Due Oct 5, 11pm (Fri)</span></li>
         <li><a href="homework/homework-5.html">Homework 6</a><span class="due">Due Oct 12, 11pm (Fri)</span></li>
         <li><a href="homework/homework-6.html">Homework 7</a><span class="due">Due  Nov 6, 2012 11:59 PM</span></li>
         <li><a href="homework/homework-7.html">Homework 8</a><span class="due">Due  Nov 21, 2012 11:59 PM</span></li>
