updated hw 6 and cmake files

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ layout: home
         <li><a href="homework/homework-3.html">Homework 3</a></span></li>
         <li><a href="homework/homework-stack.html">Homework 4</a></li>
         <li><a href="homework/homework-4.html">Homework 5</a></li>
-        <!--<li><a href="homework/homework-5.html">Homework 6</a><span class="due">Due Oct 12, 11pm (Fri)</span></li>
-        <li><a href="homework/homework-6.html">Homework 7</a><span class="due">Due  Nov 6, 2012 11:59 PM</span></li>
+        <li><a href="homework/homework-5.html">Homework 6</a></li>
+        <!--<li><a href="homework/homework-6.html">Homework 7</a><span class="due">Due  Nov 6, 2012 11:59 PM</span></li>
         <li><a href="homework/homework-7.html">Homework 8</a><span class="due">Due  Nov 21, 2012 11:59 PM</span></li>
         <li><a href="http://en.wikipedia.org/wiki/Recursion">Homework 8</a><span class="due">>>Due Oct 26, 11pm (Fri)</span></li>
         <li><a href="http://www.cplusplus.com/doc/tutorial/templates/">Homework 9</a><span class="due">>>Due Nov 2, 11pm (Fri)</span></li>
