updated nexy hw

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ layout: home
     </div>
 
     <p>
-      Midterm1: ***Feb 8th, Friday in class*** (close book/notes)<br/>
-      Midterm2: TBD <br/>
+      Midterm1: Feb 8th, Friday in class (close book/notes)<br/>
+      Midterm2: ***Mar 29th, Friday in class*** <br/>
       Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
     please submit homeworks in carmen, Due Dates are on carmen
@@ -73,8 +73,8 @@ layout: home
         <li><a href="homework/homework-stack.html">Homework 4</a></li>
         <li><a href="homework/homework-4.html">Homework 5</a></li>
         <li><a href="homework/homework-5.html">Homework 6</a></li>
-        <!--<li><a href="homework/homework-6.html">Homework 7</a><span class="due">Due  Nov 6, 2012 11:59 PM</span></li>
-        <li><a href="homework/homework-7.html">Homework 8</a><span class="due">Due  Nov 21, 2012 11:59 PM</span></li>
+        <li><a href="homework/homework-6.html">Homework 7</a></li>
+        <!--<li><a href="homework/homework-7.html">Homework 8</a><span class="due">Due  Nov 21, 2012 11:59 PM</span></li>
         <li><a href="http://en.wikipedia.org/wiki/Recursion">Homework 8</a><span class="due">>>Due Oct 26, 11pm (Fri)</span></li>
         <li><a href="http://www.cplusplus.com/doc/tutorial/templates/">Homework 9</a><span class="due">>>Due Nov 2, 11pm (Fri)</span></li>
         <li><a href="homework/homework-7.html">Homework 10</a><span class="due">Due Nov 9, 11pm (Fri)</span></li>
