--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ layout: home
 
     <p>
       Midterm1: Feb 8th, Friday in class (close book/notes)<br/>
-      Midterm2: ***Mar 29th, Friday in class*** <br/>
+      Midterm2: ***Mar 29th, Friday in class*** 
+      <a href="https://dl.dropbox.com/u/2989703/midterm-2-spring-13-a.pdf">Sample</a><br/>
       Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
     please submit homeworks in carmen, Due Dates are on carmen
