--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@ layout: home
     <p>
       Midterm1: Feb 8th, Friday in class (close book/notes)<br/>
       Midterm2: ***Mar 29th, Friday in class*** 
-      <a href="https://dl.dropbox.com/u/2989703/midterm-2-spring-13-a.pdf">Sample</a><br/>
+      <a href="https://dl.dropbox.com/u/2989703/midterm-2-spring-13-a.pdf">Sample</a>
+  <a href="https://dl.dropbox.com/u/2989703/midterm-2-spring-13-a%28sol%29.pdf">hints</a>    
+      <br/>
       Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
     </p>
     please submit homeworks in carmen, Due Dates are on carmen
