Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,91 +1,71 @@
----
-title: CSE 2122
-layout: home
----
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Cse2122 by ankitasikdar</title>
 
-<div class="left" style="margin-top: -10px;">     
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Cse2122</h1>
+        <p></p>
 
-    <ul class="index-links">
-        <li><a href="lecture/syllabus.html">Syllabus</a></li>
-        <li><a href="lecture/calendar.html">Course calendar</a></li>
-        <li><a href="lecture/installing-software.html">Installing required software</a></li>
-        <li><a href="lecture/introduction.html">Introduction to C++</a></li>
-        <li><a href="http://www.cse.ohio-state.edu/~bhattaca/Lectures/ppt/">Cse 202 slides</a></li>
-        <li><a href="lecture/variables-and-types.html">Variables and types</a></li>
-        <li><a href="lecture/classes-and-objects-brief.html">C++ classes and objects (brief intro.)</a></li>
-        <li><a href="lecture/arithmetic.html">Arithmetic</a></li>
-        <li><a href="lecture/input-output.html">Input/output</a></li>
-        <li><a href="lecture/pointers-symbol-table.html">Pointers and the symbol table</a></li>
-        <li><a href="lecture/conditionals.html">Conditionals</a></li>
-        <li><a href="lecture/loops.html">Loops</a></li>
-        <li><a href="lecture/functions.html">Functions</a> <a href="lecture/rectangle.html">(Codes)</a></li>
-        <li><a href="lecture/debugging.html">Debugging techniques</a></li>
-        <li><a href="lecture/arrays.html">Arrays</a></li>
-        <li><a href="lecture/vectors.html">Vectors</a></li>
-        <li><a href="lecture/linked-lists.html">Linked lists</a></li>
-        <li><a href="lecture/trees.html">Trees</a></li>
-        <li><a href="lecture/cpp-classes.html">C++ classes</a></li>
-        <li><a href="lecture/class-inheritance.html">Class inheritance</a></li>
-        <li><a href="lecture/class-inheritance-2.html">Class inheritance (part 2)</a></li>
-        <li><a href="lecture/splitting-code.html">Splitting code into several files</a></li>
-        <li><a href="lecture/class-example.html">C++ class example</a></li>
-        <li><a href="lecture/polymorphism.html">Polymorphism</a></li>
-        <li><a href="lecture/drawbacks-of-object-orientation.html">Drawbacks of object-orientation</a></li>
-        <li><a href="lecture/recursion.html">Recursion</a></li>
-        <li><a href="lecture/template-metaprogramming.html">Template meta-programming</a></li>
-        <li><a href="lecture/template-metaprogramming-part2.html">Template meta-programming(part2)</a></li>
-        <li><a href="lecture/maps-sets-etc.html">Maps, sets, etc.</a></li>
-        <li><a href="lecture/stl-sort-search.html">Sorting and Searching</a></li>
-        <li><a href="lecture/game-design.html">Game design</a></li>
-    </ul>
-
-</div>
+        <p class="view"><a href="https://github.com/ankitasikdar/cse2122">View the Project on GitHub <small>ankitasikdar/cse2122</small></a></p>
 
 
-<div class="right">
-    Arindam bhattacharya <br/>
-    <div id="logo">CSE 2122</div>
+        <ul>
+          <li><a href="https://github.com/ankitasikdar/cse2122/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ankitasikdar/cse2122/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ankitasikdar/cse2122">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-    <div id="contact-front">
-        <p>
-            <a href="mailto:bhattacharya.29@osu.edu">Email me</a>
-            <br/>
-            Class hours: WeFr 3:55PM - 5:15PM
-            <br/>
-            Class location: Bolz Hall 0311 
-            <br/>
-            Office hours: Mon 3:55PM - 5:15PM
-            <br/>
-            Office Location: Dreese labs 474
-        </p>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/ankitasikdar">ankitasikdar</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-
-    <p>
-      Midterm1: Feb 8th, Friday in class (close book/notes)<br/>
-      Midterm2: Mar 29th, Friday in class
-      <br/>
-      Final exam: Thursday Apr 25 4:00pm-5:45pm <br/>
-    </p>
-    please submit homeworks in carmen, Due Dates are on carmen
-    <ul class="index-links">
-        <li><a href="homework/homework-1.html">Homework 1</a></li>
-        <li><a href="homework/homework-2.html">Homework 2</a></li>
-        <li><a href="homework/homework-3.html">Homework 3</a></span></li>
-        <li><a href="homework/homework-stack.html">Homework 4</a></li>
-        <li><a href="homework/homework-4.html">Homework 5</a></li>
-        <li><a href="homework/homework-5.html">Homework 6</a></li>
-        <li><a href="homework/homework-6.html">Homework 7</a></li>
-        <li><a href="homework/homework-7.html">Homework 8</a></li>
-        <!--<li><a href="http://en.wikipedia.org/wiki/Recursion">Homework 8</a><span class="due">>>Due Oct 26, 11pm (Fri)</span></li>
-        <li><a href="http://www.cplusplus.com/doc/tutorial/templates/">Homework 9</a><span class="due">>>Due Nov 2, 11pm (Fri)</span></li>
-        <li><a href="homework/homework-7.html">Homework 10</a><span class="due">Due Nov 9, 11pm (Fri)</span></li>
-        <li><a href="http://en.wikipedia.org/wiki/Standard_Template_Library">Homework 11</a><span class="due">>></span></li>
-        <li><a href="homework/homework-5.html">Homework 5</a><span class="due">Due May 7, 11pm (Mon)</span></li>
-        <li><a href="homework/homework-6.html">Homework 6</a><span class="due">Due May 16, 11pm (Wed)</span></li>
-        <li><a href="homework/homework-7.html">Homework 7</a><span class="due">Due May 23, 11pm (Wed)</span></li>
-        <li><a href="homework/homework-8.html">Homework 8</a><span class="due">Due Jun  1, 11pm (Fri)</span></li>
-        -->
-    </ul>
-</div>
-
-
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
