Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Cse2122 : " />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Cse2122 by ankitasikdar</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Cse2122</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Cse2122</h1>
+        <p></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
+        <p class="view"><a href="https://github.com/ankitasikdar/cse2122">View the Project on GitHub <small>ankitasikdar/cse2122</small></a></p>
 
-          <h1 id="project_title">Cse2122</h1>
-          <h2 id="project_tagline"></h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <ul>
+          <li><a href="https://github.com/ankitasikdar/cse2122/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ankitasikdar/cse2122/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ankitasikdar/cse2122">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p>Instructor: Ankita Sikdar</p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>Instructor: Ankita Sikdar
-Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a>
-Class hours : Tues Wed Thurs Fri 9.35am-10.55am
-Class location : Bolz Hall 180
-Office hours : Wed 3-5pm, Thurs 12-1pm
-Office location : Caldwell Lab 418</p>
+<p>Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a></p>
+
+<p>Class hours : Tues Wed Thurs Fri 9.35am-10.55am</p>
+
+<p>Class location : Bolz Hall 180</p>
+
+<p>Office hours : Wed 3-5pm, Thurs 12-1pm</p>
+
+<p>Office location : Caldwell Lab 418</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Cse2122 maintained by <a href="https://github.com/ankitasikdar">ankitasikdar</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/ankitasikdar">ankitasikdar</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
