Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>Office location : Caldwell Lab 418</p>
 
-<p><a href="http://bhattaca.github.io/cse2122/lecture/syllabus.html">ab</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/syllabus.html">ab</a></p>
       </section>
     </div>
 
