--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Cse2122 : " />
+    <meta name="description" content="Cse2122 : Data Structures Using C++" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
 
           <h1 id="project_title">Cse2122</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">Data Structures Using C++</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
@@ -43,7 +43,25 @@
 
 <p>Office location : Caldwell Lab 418</p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/lecture/syllabus.html">ab</a></p>
+<p><strong>Course Contents</strong></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/syllabus.html">Syllabus</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/introduction.html">Introduction to C++</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/variables-and-types.html">Variables and types</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/classes-and-objects-brief.html">C++ classes and objects(brief introduction)</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/arithmetic.html">Arithmetic</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/input-output.html">Input/Output</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/pointers-symbol-table.html">Pointers and the Symbol Table</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/conditionals.html">Conditionals</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/loops.html">Loops</a></p>
       </section>
     </div>
 
