Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/syllabus.html">Syllabus</a></p>
 
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/calendar.html">Course Calender</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/installing-software.html">Installing required software</a></p>
+
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/introduction.html">Introduction to C++</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/variables-and-types.html">Variables and types</a></p>
