Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p>Class hours : Tues Wed Thurs Fri 9.35am-10.55am</p>
 
-<p>Class location : Bolz Hall 180</p>
+<p>Class location : Baker Systems 180</p>
 
 <p>Office hours : Wed 3-5pm, Thurs 12-1pm</p>
 
