Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
+
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-            
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -62,6 +66,14 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/conditionals.html">Conditionals</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/loops.html">Loops</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/functions.html">Functions</a> <a href="http://ankitasikdar.github.io/cse2122/lecture/rectangle.html">Codes</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/debugging.html">Debugging techniques</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/arrays.html">Arrays</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/vectors.html">Vectors</a></p>
       </section>
     </div>
 
