--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-         
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
 
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-            
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -69,6 +72,10 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/arrays.html">Arrays</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/vectors.html">Vectors</a></p>
+
+<p><strong>Homeworks</strong></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/20/2013 11.59pm</a> </p>
       </section>
     </div>
 
