Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-         
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
 
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-           
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -73,6 +76,20 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/linked-lists.html">Linked lists</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/trees.html">Trees</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/cpp-classes.html">C++ Classes</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/class-inheritance.html">Class Inheritance</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/class-inheritance-2.html">Class Inheritance (part2)</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/splitting-code.html">Splitting code into several files</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/class-example.html">Example of a C++ class</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/polymorphism.html">Polymorphism</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/drawbacks-of-object-orientation.html">Drawbacks of object orientation</a></p>
 
 <p><strong>Homeworks</strong></p>
 
