--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-         
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
+
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-           
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -94,6 +98,8 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 6/25/2013 11.59pm</a> </p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 6/27/2013 11.59pm</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 7/3/2013 11.59pm</a></p>
 
 <p><strong>Midterms</strong></p>
 
