--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-      
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
 
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-            
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -92,7 +95,7 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/template-metaprogramming.html">Template meta-programming</a></p>
 
-<p>[Template meta-programming(part2) (<a href="http://ankitasikdar.github.io/cse2122/lecture/template-metaprogramming-part2.html">http://ankitasikdar.github.io/cse2122/lecture/template-metaprogramming-part2.html</a>)</p>
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/template-metaprogramming-part2.html">Template meta-programming(part2)</a></p>
 
 <p><strong>Homeworks</strong></p>
 
