Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-       
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
 
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-            
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -96,6 +99,10 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/maps-sets-etc.html">Maps, Sets, etc</a></p>
 
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/stl-sort-search.html">Sorting and Searching</a></p>
+
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/game-design.html">Game Desgin</a></p>
+
 <p><strong>Homeworks</strong></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/20/2013 11.59pm</a> </p>
@@ -112,6 +119,8 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 7/23/2013 11.59pm</a></p>
 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/26/2013 11.59pm</a></p>
+
 <p><strong>Midterms</strong></p>
 
 <p>First midterm on 6/25/2013</p>
@@ -124,6 +133,13 @@
 <ul>
 <li>Closed book,closed notes</li>
 <li>Syllabus-materials covered in class till 7/11/2013</li>
+</ul><p><strong>IMPORTANT</strong>
+Third midterm (OPTIONAL) on 7/25/2013</p>
+
+<ul>
+<li>Closed book,closed notes</li>
+<li>Syllabus-materials covered in class till 7/24/2013</li>
+<li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
 </ul>
       </section>
     </div>
