--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
 
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-           
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -138,6 +141,13 @@
 <li>Closed book,closed notes</li>
 <li>Syllabus-materials covered in class till 7/24/2013</li>
 <li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
+</ul><p><strong>Finals</strong></p>
+
+<p>Final exam on 7/29/2013</p>
+
+<ul>
+<li>Closed book,closed notes</li>
+<li>Syllabus-materials covered in class till 7/26/2013</li>
 </ul>
       </section>
     </div>
