--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-         
+          <a id="forkme_banner" href="https://github.com/ankitasikdar/cse2122">View on GitHub</a>
 
           <h1 id="project_title">Cse2122</h1>
           <h2 id="project_tagline">Data Structures Using C++</h2>
 
-            
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ankitasikdar/cse2122/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ankitasikdar/cse2122/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -32,7 +35,7 @@
 
 <p>Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a></p>
 
-<p>Class hours : Tues Wed Thurs Fri 9.35am-10.55am</p> 
+<p>Class hours : Tues Wed Thurs Fri 9.35am-10.55am</p>
 
 <p>Class location : Baker Systems 180</p>
 
@@ -100,6 +103,8 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/game-design.html">Game Desgin</a></p>
 
+<p><strong>Exception Handling (refer to class notes)</strong></p>
+
 <p><strong>Homeworks</strong></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/20/2013 11.59pm</a> </p>
@@ -116,7 +121,7 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 7/23/2013 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/26/2013 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/27/2013 11.59pm</a></p>
 
 <p><strong>Midterms</strong></p>
 
