--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 <p>Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a></p>
 
-<p>Class hours : Tues Wed Thurs Fri 9.35am-10.55am</p>
+<p>Class hours : Wed Fri 3.55pm-5.15pm</p>
 
-<p>Class location : Baker Systems 180</p>
+<p>Class location : Caldwell Lab 220</p>
 
-<p>Office hours : Wed 3-5pm, Thurs 12-1pm</p>
+<p>Office hours : TBA </p>
 
 <p>Office location : Caldwell Lab 418</p>
 
@@ -62,6 +62,7 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/conditionals.html">Conditionals</a></p>
 
+<!--
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/loops.html">Loops</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/functions.html">Functions</a> <a href="http://ankitasikdar.github.io/cse2122/lecture/rectangle.html">Codes</a></p>
@@ -100,9 +101,9 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/game-design.html">Game Desgin</a></p>
 
-<p><strong>Exception Handling (refer to class notes)</strong></p>
+<p><strong>Exception Handling (refer to class notes)</strong></p> -->
 
-<p><strong>Homeworks</strong></p>
+<!-- <p><strong>Homeworks</strong></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/20/2013 11.59pm</a> </p>
 
@@ -118,9 +119,9 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 7/23/2013 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/27/2013 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/27/2013 11.59pm</a></p> -->
 
-<p><strong>Midterms</strong></p>
+<!-- <p><strong>Midterms</strong></p>
 
 <p>First midterm on 6/25/2013</p>
 
@@ -150,7 +151,7 @@
 </ul>
       </section>
     </div>
-
+-->
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
