--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/conditionals.html">Conditionals</a></p>
 
-<!--
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/loops.html">Loops</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/functions.html">Functions</a> <a href="http://ankitasikdar.github.io/cse2122/lecture/rectangle.html">Codes</a></p>
-
+<!--
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/arrays.html">Arrays</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/vectors.html">Vectors</a></p>
@@ -103,10 +102,11 @@
 
 <p><strong>Exception Handling (refer to class notes)</strong></p> -->
 
-<!-- <p><strong>Homeworks</strong></p>
+<p><strong>Homeworks</strong></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/20/2013 11.59pm</a> </p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 1/22/2014 11.59pm</a> </p>
 
+<!--
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 6/25/2013 11.59pm</a> </p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 6/27/2013 11.59pm</a></p>
