--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Class location : Caldwell Lab 220</p>
 
-<p>Office hours : TBA </p>
+<p>Office hours : Monday 3.30-5pm </p>
 
 <p>Office location : Caldwell Lab 418</p>
 
