--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 1/29/2014 11.59pm</a> </p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 2/5/2014 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 2/7/2014 11.59pm (Bonus points if you handle the edges instead of ignoring them) </a></p>
 <!--
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 7/3/2013 11.59pm</a></p>
 
