--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 1/29/2014 11.59pm</a> </p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 2/7/2014 11.59pm (Bonus points if you handle the edges instead of ignoring them) </a></p>
-<!--
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 7/3/2013 11.59pm</a></p>
 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 2/15/2014 11.59pm</a></p>
+<!--
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework5, due 7/11/2013 11.59pm</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework6, due 7/16/2013 11.59pm</a></p>
@@ -121,13 +121,13 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/27/2013 11.59pm</a></p> -->
 
-<!-- <p><strong>Midterms</strong></p>
+<p><strong>Midterms</strong></p>
 
-<p>First midterm on 6/25/2013</p>
+<p>First midterm on 2/21/2013</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 6/21/2013</li>
+<!--<li>Syllabus-materials covered in class till 6/21/2013</li>  
 </ul><p>Second midterm on 7/12/2013</p>
 
 <ul>
