--- a/index.html
+++ b/index.html
@@ -128,11 +128,13 @@
 <ul>
 <li>Closed book,closed notes</li>
 <!--<li>Syllabus-materials covered in class till 6/21/2013</li>  
-</ul><p>Second midterm on 7/12/2013</p>
+-->
+</ul><p>Second midterm on 3/28/2014</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 7/11/2013</li>
+<li>Syllabus-to be announced later</li>
+<!--
 </ul><p><strong>IMPORTANT</strong></p>
 
 <p>Third midterm (OPTIONAL) on 7/25/2013</p>
