--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
 <li>Syllabus-materials covered in class till 7/24/2013</li>
 <li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
 </ul><p><strong>Finals</strong></p>
-
-<p>Final exam on 7/29/2013 from 10:00am - 11:45am (class room)</p>
+-->
+<p>Final exam on 4/24/2014 from 4:00pm - 5:45pm (class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 7/26/2013</li>
+<!--<li>Syllabus-materials covered in class till 7/26/2013</li> -->
 </ul>
       </section>
     </div>
