--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/stl-sort-search.html">Sorting and Searching</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/game-design.html">Game Desgin</a></p>
-<!--
-<p><strong>Exception Handling (refer to class notes)</strong></p> -->
+
+<p><strong>Exception Handling (refer to class notes)</strong></p> 
 
 <p><strong>Homeworks</strong></p>
 
