--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <ul>
 <li>Closed book,closed notes</li>
 <!--<li>Syllabus-materials covered in class till 6/21/2013</li>  
--->
+
 </ul><p>Second midterm on 3/28/2014</p>
 
 <ul>
@@ -144,13 +144,13 @@
 <li>Syllabus-materials covered in class till 7/24/2013</li>
 <li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
 </ul><p><strong>Finals</strong></p>
--->
+
 <p>Final exam on 4/24/2014 from 4:00pm - 5:45pm (class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<!--<li>Syllabus-materials covered in class till 7/26/2013</li> -->
-</ul>
+<!--<li>Syllabus-materials covered in class till 7/26/2013</li> 
+</u>
       </section>
     </div>
 -->
